structure reactjs project

--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.87.0",
+    "sass-loader": "^16.0.5"
   }
 }
