--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "8.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
