--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
     "sass": "^1.87.0",
     "sass-loader": "^16.0.5"
   },
-  "homepage": "https://github.com/zabaoit/react-basic"
+  "homepage": "https://zabaoit.github.io/react-basic"
 }
