--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "5.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "8.0.2",
     "web-vitals": "^2.1.4"
